fixed some responsive stuff on noumenon project

--- a/proj_noumenon.html
+++ b/proj_noumenon.html
@@ -17,7 +17,9 @@
 
   <div class="left wow slideInUp">
     <h3>– 2019</h3>
-    <h2>Noumenon –<br>we are all different</h2>
+    <h2>Noumenon</h2>
+    <a href="http://noumenon.lauragyr.ch/"><img id="button-noumenon" class="rotation" src="assets/projects/button_noumenon.png" alt=""></a>
+
     <div class="facts wow slideInUp">
       <p class="bold">type of project:</p>
       <p>interactive installation based on real-time data</p>
@@ -26,21 +28,28 @@
       <p class="bold">techniques:</p>
       <p>HTML, CSS, JS, p5js | Illustrator, Adobe XD</p>
     </div>
+
   </div>
   </div>
   <div id="addlink" class="right wow slideInUp">
-    <h1>What if we could take a selfie that represents our personality? For my bachelor-project I created a visual language to illustrate someones personality.<br>A person can answer questions and the noumenon is being created depending on the answer that is given. When the noumenon is done, the visitor can print his own unique noumenon and take it home.</h1>
-    <!--<a href="http://yaay.ch/refugees-in-europe/" target="_blank">check out project</a>-->
-    <a href="https://www.alumnihslu.ch/de-ch/angebot/foerderpreis-design-kunst/" target="_blank">nominated for the Alumni Award from Lucerne University of Applied Sciences and Art</a>
+    <h1>Noumenon creates a visual language to illustrate someones personality. A questionnaire is used to identify trends in character traits and visualise them continuously with colours and shapes.</h1>
+    <a class="noumenon" href="https://www.alumnihslu.ch/de-ch/angebot/foerderpreis-design-kunst/" target="_blank">– nominated for the Alumni Award from Lucerne University of Applied Sciences and Art</a>
+    <a class="noumenon" href="https://www.designbiennalezurich.ch/2019/noumenon" target="_blank">– exhibited at design biennale zurich 2019</a>
   </div>
 
 
   <div class="project">
-      <img class="wow slideInUp" src="assets/projects/noumenon_overview.jpg">
-      <img class="wow slideInUp" src="assets/projects/noumenon_explanation1.jpg">
+    <img class="wow slideInUp" src="assets/projects/noumenon_overview_small.jpg">
     <img class="wow slideInUp" src="assets/projects/noumenon_ws1.JPG">
-    <img class="wow slideInUp" src="assets/projects/noumenon_ws2.JPG">
-    <img class="wow slideInUp" src="assets/projects/noumenon_ws3.JPG">
+    <img class="wow slideInUp" src="assets/projects/noumenon_examples.jpg">
+    <div class="twocolumn">
+      <img class="wow slideInUp" src="assets/projects/noumenon_explanation_website_en.jpg">
+      <img class="wow slideInUp" src="assets/projects/noumenon_explanation_werkschau.JPG">
+    </div>
+    <video id="video" class="wow slideInUp" width="100%" height="auto" controls>
+      <source src="assets/projects/noumenon_Trailer.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
 
   <div class="next">
