--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
 <body onload="document.body.style.opacity='1'">
 <div id="menubar" onclick="switchWhite()"></div>
 <div class="about wow slideInUp">
-  <h3>I'm laura, a digital ideation student who's passionate about new technology, animation and typography. I love to make complex content look simple and understandable.</h3>
+  <h3>I'm laura, a digital designer who's passionate about new technology, infographics and animation. I love to make complex content look simple and understandable.</h3>
   <div class="button cv wow slideInUp">
-    <a href="assets/CV_LauraGyr_19_en.pdf" target="blank"></a>
+    <a href="assets/CV_LauraGyr_2020_en.pdf" target="blank"></a>
     <p>see my CV<br>>></p>
   </div>
   <div class="button mail wow slideInUp">
