--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="boxwrapper" id="box1">
 					<a href="proj_noumenon.html">
 						<div class="cover one"></div>
-						<div class="box yellow"></div>
+						<div class="box violet"></div>
 						<div class="info">
 							<h3>— 2019</h3>
 							<h2>Noumenon</h2>
