--- a/proj_noumenon.html
+++ b/proj_noumenon.html
@@ -33,8 +33,8 @@
   </div>
   <div id="addlink" class="right wow slideInUp">
     <h1>Noumenon creates a visual language to illustrate someones personality. A questionnaire is used to identify trends in character traits and visualise them continuously with colours and shapes.</h1>
-    <a class="noumenon" href="https://www.alumnihslu.ch/de-ch/angebot/foerderpreis-design-kunst/" target="_blank">– nominated for the Alumni Award from Lucerne University of Applied Sciences and Art</a>
-    <a class="noumenon" href="https://www.designbiennalezurich.ch/2019/noumenon" target="_blank">– exhibited at design biennale zurich 2019</a>
+    <a class="twoline-link" href="https://www.alumnihslu.ch/de-ch/angebot/foerderpreis-design-kunst/" target="_blank">– nominated for the Alumni Award from Lucerne University of Applied Sciences and Art</a>
+    <a class="twoline-link" href="https://www.designbiennalezurich.ch/2019/noumenon" target="_blank">– exhibited at design biennale zurich 2019</a>
   </div>
 
 
