--- a/proj_ref.html
+++ b/proj_ref.html
@@ -31,8 +31,8 @@
   <div id="addlink" class="right wow slideInUp">
     <h1>How does the number of refugees compare to the number of citizens in each European country, and where did they
       come from?</h1>
-    <a href="http://yaay.ch/refugees-in-europe/" target="_blank">check out project</a>
-    <a href="https://www.informationisbeautifulawards.com/showcase/3048-european-asylum-is-a-diverse-story" id="kantar" target="_blank">longlist of Information is Beautiful Awards 2018</a>
+    <a class="twoline-link" href="http://yaay.ch/refugees-in-europe/" target="_blank">– check out interactive project</a>
+    <a class="twoline-link" href="https://www.informationisbeautifulawards.com/showcase/3048-european-asylum-is-a-diverse-story" id="kantar" target="_blank">– longlist of Information is Beautiful Awards 2018</a>
   </div>
 
 
