optimized intro-anim, added button to introduction

--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -7,34 +7,37 @@
 	<title>lauragyr.ch // introduction</title>
 
 	<link rel="stylesheet" type="text/css" href="introduction.css">
+
 </head>
 
 <body>
 	<div class="container">
-	<div class="typing" id="screen1">
-		<h3>Hej! My name is laura.</h3>
-	</div>
-	<div class="typing" id="screen2">
-		<h3>I'm a digital designer with a big knowledge in classic printmedia design.</h3>
+		<div id="screen1">
+			<h3>hej wondrous!</h3>
+		</div>
+		<div id="screen2">
+			<h3>my name is laura.</h3>
+		</div>
+		<div id="screen3">
+			<h3>I'm a digital designer with a passion for clean design.</h3>
+		</div>
+		<div id="screen4">
+			<h3>I´m interested in new technologies</h3>
+		</div>
 
-	</div>
-	<div class="typing" id="screen3">
-		 <h3>My interest lies in new technologies </h3>
-		 
-	</div>
-	<div class="typing" id="screen4">
-		<h3>and I am continously working on my programming skills.</h3>
-	</div>
-	
-	<div class="typing" id="screen5">
-		<h3>Now, let's not waste anymore time.</h3>
-	</div>
+		<div id="screen5">
+			<h3>and am continously working on my programming skills.</h3>
+		</div>
 
-	<div class="typing" id="screen6">
-		<h3>let me show you my portfolio.</h3>
-		<!--<a href="laurgyr.ch">portfolio of laura gyr</a>-->
+		<div id="screen6">
+			<h3>now, let me show you my portfolio.</h3>
+			<a href="https://lauragyr.ch/">
+				<div class="portfolio-box" id="screen7">
+					<h2>go to portfolio</h2>
+				</div>
+			</a>
+		</div>
 	</div>
-</div>
 </body>
 
 
