changed introduction like a thousand times

--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -19,18 +19,18 @@
 			<h3>my name is laura.</h3>
 		</div>
 		<div id="screen3">
-			<h3>I'm a digital designer with a passion for clean design.</h3>
+			<h3>I love to combine complex stories with good design.</h3>
 		</div>
 		<div id="screen4">
-			<h3>I´m interested in new technologies</h3>
+			<h3>I'm overly organized, extremly ambitious but really sociable.</h3>
 		</div>
 
 		<div id="screen5">
-			<h3>and am continously working on my programming skills.</h3>
+			<h3>and because I'm very straight forward —</h3>
 		</div>
 
 		<div id="screen6">
-			<h3>now, let me show you my portfolio.</h3>
+			<h3>lets just see what I've made so far.</h3>
 			<a href="https://lauragyr.ch/">
 				<div class="portfolio-box" id="screen7">
 					<h2>go to portfolio</h2>
