--- a/introduction.html
+++ b/introduction.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>lauragyr.ch // introduction</title>
 
-	<link rel="stylesheet" type="text/css" href="introduction.css">
+	<link rel="stylesheet" type="text/css" href="css/introduction.css">
 
 </head>
 
