deleted preloader, changed z-index of intro-text

--- a/index.html
+++ b/index.html
@@ -2,176 +2,176 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>lauragyr.ch</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>lauragyr.ch</title>
 
-	<link rel="stylesheet" type="text/css" href="css/generalstyles.css">
-	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
-	<link rel="stylesheet" type="text/css" href="css/intro.css">
-	<link rel="stylesheet" type="text/css" href="css/intro-animation.css">
-	<link rel="stylesheet" type="text/css" href="css/preloader.css">
-	<link rel="stylesheet" type="text/css" href="plugins/fullpage.css">
+    <link rel="stylesheet" type="text/css" href="css/generalstyles.css">
+    <link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
+    <link rel="stylesheet" type="text/css" href="css/intro.css">
+    <link rel="stylesheet" type="text/css" href="css/intro-animation.css">
+    <link rel="stylesheet" type="text/css" href="css/preloader.css">
+    <link rel="stylesheet" type="text/css" href="plugins/fullpage.css">
 </head>
 
 <body onload="document.body.style.opacity='1'">
-	<div id="menubar" onclick="switchViolet()"></div>
-	<div id="fullpage">
-		<div class="introscreen">
-		<div id="preloader">
-			<div class="startdot">
-			</div>
-		</div>
-		<div id="intro" class="section">
-			<p>hej there!</p>
-			<div id="animation">
-				<div class="circle uno"></div>
-				<div class="circle due"></div>
-				<div class="circle tre"></div>
-			</div>
+    <div id="menubar" onclick="switchViolet()"></div>
+    <div id="fullpage">
+        <div class="introscreen">
+            <!--<div id="preloader">-->
+            <div class="startdot">
+            </div>
+        </div>
+        <div id="intro" class="section">
+            <p>hej there!</p>
+            <div id="animation">
+                <div class="circle uno"></div>
+                <div class="circle due"></div>
+                <div class="circle tre"></div>
+            </div>
 
 
-			<div id="scroll">
-				<h3>scroll down</h3>
-			</div>
-		</div>
-	</div>
+            <div id="scroll">
+                <h3>scroll down</h3>
+            </div>
+        </div>
+    </div>
 
-		<div id="container" class="section">
-			<div id="containerscroll">
-				<div class="boxwrapper" id="box1">
-					<a href="proj_noumenon.html">
-						<div class="cover one"></div>
-						<div class="box yellow"></div>
-						<div class="info">
-							<h3>— 2019</h3>
-							<h2>Noumenon</h2>
-							<h3>interactive installation with real-time-data</h3>
-						</div>
-					</a>
-				</div>
+    <div id="container" class="section">
+        <div id="containerscroll">
+            <div class="boxwrapper" id="box1">
+                <a href="proj_noumenon.html">
+                    <div class="cover one"></div>
+                    <div class="box yellow"></div>
+                    <div class="info">
+                        <h3>— 2019</h3>
+                        <h2>Noumenon</h2>
+                        <h3>interactive installation with real-time-data</h3>
+                    </div>
+                </a>
+            </div>
 
-				<div class="boxwrapper" id="box2">
-					<a href="proj_ref.html">
-						<div class="cover two"></div>
-						<div class="box violet"></div>
-						<div class="info">
-							<h3>— 2018</h3>
-							<h2>Refugees in Europe</h2>
-							<h3>data visualization</h3>
-						</div>
-					</a>
-				</div>
+            <div class="boxwrapper" id="box2">
+                <a href="proj_ref.html">
+                    <div class="cover two"></div>
+                    <div class="box violet"></div>
+                    <div class="info">
+                        <h3>— 2018</h3>
+                        <h2>Refugees in Europe</h2>
+                        <h3>data visualization</h3>
+                    </div>
+                </a>
+            </div>
 
-				<div class="boxwrapper" id="box3">
-					<a href="proj_bees.html">
-						<div class="cover three">
-						</div>
+            <div class="boxwrapper" id="box3">
+                <a href="proj_bees.html">
+                    <div class="cover three">
+                    </div>
 
-						<div class="box yellow">
-						</div>
+                    <div class="box yellow">
+                    </div>
 
-						<div class="info">
-							<h3>— 2018</h3>
-							<h2>Life of Bees</h2>
-							<h3>educational animation video</h3>
-						</div>
-					</a>
-				</div>
+                    <div class="info">
+                        <h3>— 2018</h3>
+                        <h2>Life of Bees</h2>
+                        <h3>educational animation video</h3>
+                    </div>
+                </a>
+            </div>
 
-				<div class="boxwrapper" id="box4">
-					<a href="proj_faden.html">
-						<div class="cover four">
-						</div>
+            <div class="boxwrapper" id="box4">
+                <a href="proj_faden.html">
+                    <div class="cover four">
+                    </div>
 
-						<div class="box violet">
-						</div>
+                    <div class="box violet">
+                    </div>
 
-						<div class="info">
-							<h3>— 2017</h3>
-							<h2>Der rote Faden</h2>
-							<h3>interactive website</h3>
-						</div>
-					</a>
-				</div>
+                    <div class="info">
+                        <h3>— 2017</h3>
+                        <h2>Der rote Faden</h2>
+                        <h3>interactive website</h3>
+                    </div>
+                </a>
+            </div>
 
-				<div class="boxwrapper" id="box5">
-					<a href="proj_balls.html">
-						<div class="cover five">
-						</div>
+            <div class="boxwrapper" id="box5">
+                <a href="proj_balls.html">
+                    <div class="cover five">
+                    </div>
 
-						<div class="box yellow">
-						</div>
+                    <div class="box yellow">
+                    </div>
 
-						<div class="info">
-							<h3>— 2017</h3>
-							<h2>Collection of Balls</h2>
-							<h3>3D-Renderings in Cinema 4D</h3>
-						</div>
-					</a>
-				</div>
+                    <div class="info">
+                        <h3>— 2017</h3>
+                        <h2>Collection of Balls</h2>
+                        <h3>3D-Renderings in Cinema 4D</h3>
+                    </div>
+                </a>
+            </div>
 
-				<div class="boxwrapper" id="box6">
-					<a href="proj_adoptions.html">
-						<div class="cover six">
-						</div>
+            <div class="boxwrapper" id="box6">
+                <a href="proj_adoptions.html">
+                    <div class="cover six">
+                    </div>
 
-						<div class="box violet">
-						</div>
+                    <div class="box violet">
+                    </div>
 
-						<div class="info">
-							<h3>— 2017</h3>
-							<h2>Evolution Adoption</h2>
-							<h3>infographic and animation video</h3>
-						</div>
-					</a>
-				</div>
+                    <div class="info">
+                        <h3>— 2017</h3>
+                        <h2>Evolution Adoption</h2>
+                        <h3>infographic and animation video</h3>
+                    </div>
+                </a>
+            </div>
 
-				<div class="boxwrapper" id="box7">
-					<a href="proj_idiot.html">
-						<div class="cover seven">
-						</div>
+            <div class="boxwrapper" id="box7">
+                <a href="proj_idiot.html">
+                    <div class="cover seven">
+                    </div>
 
-						<div class="box yellow">
-						</div>
+                    <div class="box yellow">
+                    </div>
 
-						<div class="info">
-							<h3>— 2017</h3>
-							<h2>Walk Idiot Walk</h2>
-							<h3>2D animation video</h3>
-						</div>
-					</a>
-				</div>
+                    <div class="info">
+                        <h3>— 2017</h3>
+                        <h2>Walk Idiot Walk</h2>
+                        <h3>2D animation video</h3>
+                    </div>
+                </a>
+            </div>
 
-			</div>
-		</div>
-	</div>
+        </div>
+    </div>
+    </div>
 
-	<script src="js/scroll.js" type="text/javascript"></script>
-	<script src="js/bug-fixing.js" type="text/javascript"></script>
-	<script src="js/menu-animation.js" type="text/javascript"></script>
-	<script src="plugins/fullpage.js" type="text/javascript"></script>
-	<script src="plugins/fullpage.extensions.min.js" type="text/javascript"></script>
-	<!--<script>
+    <script src="js/scroll.js" type="text/javascript"></script>
+    <script src="js/bug-fixing.js" type="text/javascript"></script>
+    <script src="js/menu-animation.js" type="text/javascript"></script>
+    <script src="plugins/fullpage.js" type="text/javascript"></script>
+    <script src="plugins/fullpage.extensions.min.js" type="text/javascript"></script>
+    <!--<script>
 	new fullpage('#fullpage', {
 		/*licenseKey:"OPEN",*/
 		autoScrolling: true,
 		scrollHorizontally: true,
 	});
 </script>-->
-<script>
-	//preoloader stuff
-setTimeout(function() {
-	document.querySelector("body").style.visibility = "visible"; 
-    document.querySelector("#preloader").style.visibility = "hidden"; 
-}, 4000);
+    <script>
+        //preoloader stuff
+        setTimeout(function() {
+            document.querySelector("body").style.visibility = "visible";
+            document.querySelector("#preloader").style.visibility = "hidden";
+        }, 4000);
 
-setTimeout(function() {
-	var dot = document.getElementsByClassName("startdot");
-  		dot[0].classList.add('dotscale');
-//document.getElementById("MyElement").classList.remove('dot');
-}, 100);
-</script> 
+        setTimeout(function() {
+            var dot = document.getElementsByClassName("startdot");
+            dot[0].classList.add('dotscale');
+            //document.getElementById("MyElement").classList.remove('dot');
+        }, 100);
+    </script>
 </body>
 
 </html>
